--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     display: flex;
     flex: auto;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     background-color: rgb(255, 255, 255);
 }
