--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ body {
     align-items: center;
 }
 
+h1 {
+    font-size: 45px;
+}
+
 .game_area {
     display: flex;
     flex: auto;
@@ -31,6 +35,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     background-color: rgb(255, 255, 255);
+    padding: 10px;
 }
 
 .cardbox {
@@ -40,7 +45,9 @@ body {
 }
 
 .cards {
+    display: flex;
     padding: 10px;
+    
 }
 
 button {
@@ -55,6 +62,22 @@ button {
     justify-content: center;
 }
 
+.gameinfo {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.score {
+    display: flex;
+    flex: auto;
+    border: 1px black solid;
+    border-radius: 15px;
+    padding: 15px;
+    align-items: center;
+    justify-content: center;
+}
+
 .footer {
     display: flex;
     flex: auto;
@@ -64,5 +87,8 @@ button {
     max-height: 50px;
 }
 
+button:hover {
+    background-color: lightyellow;
+}
 
 
