--- a/style.css
+++ b/style.css
@@ -62,21 +62,13 @@ button {
     justify-content: center;
 }
 
-.gameinfo {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
-
 .score {
     display: flex;
-    flex: auto;
-    border: 1px black solid;
-    border-radius: 15px;
-    padding: 15px;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
+
 
 .footer {
     display: flex;
