--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 html, body {
-    height: 100%;
+    height: 100%;    
     margin: 0;
     padding: 0;
 }
@@ -47,7 +47,7 @@ h1 {
 .cards {
     display: flex;
     padding: 10px;
-    
+    flex: auto;  
 }
 
 button {
